# Raspberry

./: README.md  main.cpp  main_work00.cpp  main_work02_ok.cpp
1_WiringPi/: ledtest.txt
3_webfiles_cpp/edit_01/: CMakeLists.txt  main.cpp
3_webfiles_cpp/edit_02/: main.cpp
3_webfiles_cpp/orig_http_server/: led.h  main_server.cpp  my_http_middle_ware.h
3_webfiles_cpp/orig_poco/: CMakeLists.txt  main.cpp
4_switch_on_off/: main_work02_ok.cpp  readme.txt
Buffalo_terastation_ts-xl-r5/doc_en_yamasita_jp/doc_en_yamasita_jp/: index.html
Buffalo_terastation_ts-xl-r5/doc_en_yamasita_jp/index_files/: f.txt  saved_resource.html  tweet_button.0ab153032b20288d9a500659d8c7ba17.ja.html
Buffalo_terastation_ts-xl-r5/log/: 01.rtf  02.rtf
CV/: cv.doc  cv1.doc  cv2.doc  ~$cv.doc  ~$cv1.doc  ~$cv2.doc
CV/_sss/: cv.doc
CV/_sss/08_stairs/: Copy #1 of detali.txt
CV/_sss/MySQL/: BD.psd
Cisco/: 2800.txt  2800_after_configuration.txt  2800_without_ios.txt  _02_config.txt
Liberty/day_02 The Anatomy of a C++ Program/048_func/: main.cpp
Liberty/day_03 Working with Variables and Constants/058_unsigned/: main.cpp
Liberty/day_04 Creating Expressions and Statements/073_expressions/: main.cpp
Liberty/day_04 Creating Expressions and Statements/075_owerflow/: main.cpp
Liberty/day_04 Creating Expressions and Statements/076_float/: main.cpp
Liberty/day_04 Creating Expressions and Statements/084_if/: main.cpp
Liberty/day_04 Creating Expressions and Statements/091_if_else/: main.cpp
Liberty/day_05 Organizing into Functions/108_void_function/: main.cpp
Liberty/day_05 Organizing into Functions/120_polimorphism/: main.cpp
Liberty/day_06 Understanding Object-Oriented Programming/141_class_public/: main.cpp
Liberty/day_06 Understanding Object-Oriented Programming/160_rect_class/: Rect.hpp
Liberty/day_07 More on Program Flow/167_goto/: main.cpp
Liberty/day_07 More on Program Flow/169_while/: main.cpp
Liberty/day_07 More on Program Flow/170_while_complex/: main.cpp
Liberty/day_07 More on Program Flow/173_while/: main.cpp
Liberty/day_07 More on Program Flow/174_while_skipping/: main.cpp
Liberty/day_07 More on Program Flow/180_for/: main.cpp
Liberty/day_07 More on Program Flow/182_for_nested_loops/: main.cpp
Liberty/day_07 More on Program Flow/184_fibonache/: main.cpp
Liberty/day_07 More on Program Flow/188_switch/: main.cpp
LimeSDR_mini/01_examp_fm/: FM.grc
LimeSDR_mini/install_GRC_RPi/: install.txt
Nokia_nmt_450/philips/: index.html  philips2310_user_manual_russian.rtf  piptext.htm  url.txt
RLY-8-Relay-Controller/: readme.txt
Raspberry_Cpp/: README.md
Raspberry_Cpp/1_WiringPi/: ledtest.cpp
Raspberry_Cpp/2_poco/: instructions_01.txt  main.cpp  poco_v1-10-1.sh  poco_v1-7-7.sh  poco_v1-9-2.sh  z_cmake.sh
Raspberry_Cpp/3_webfiles_cpp/edit_01_webservers/: CMakeLists.txt  EchoServer.cpp  WebSocketServer.cpp  first_second.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  main3_HTTPFormServer.cpp
Raspberry_Cpp/3_webfiles_cpp/edit_03_qt/: CMakeLists.txt  LIB_SO.txt  http_answer.txt  main.cpp  poco_1_10_1.sh  poco_1_9_2.sh  readme.txt  rpi_inst.sh  run1_10_1.sh  run1_7_7.sh  run1_9_2.sh
Raspberry_Cpp/4_switch_on_off/: main_work01_ok.cpp  main_work03_ok.cpp
Raspberry_Cpp/6_eclips/: rpi_update.txt
Raspberry_Cpp/Book_MySQL/: MySQL.txt  MySQL_requare.rtf  Untitled 2.txt
Raspberry_Cpp/Book_QA/: savin_bug.doc  ~WRL0094.tmp  ~WRL3374.tmp
Raspberry_Cpp/GIT_lesson/: gitHub_.txt
Raspberry_Cpp/Garbage/link/: qqq.txt
Raspberry_Python/: .gitignore
Raspberry_Python/domain/: status.py
Raspberry_Python/switchservice/: app.py  command.txt  configuration.py
differents_things/: 01.txt  README.md  README.md_
differents_things/08_stairs/: Copy #1 of transistor.txt
garbage/: readme.txt
garbage/Apache+CGI/: readmre.txt
note/: gcc.txt
poco/: instructions.txt  instructions_01.txt  tmp.txt
poco/poco_1.9.2/: SHASUMS256.txt  SHASUMS256.txt.asc  poco-1.9.2.tar.bz2
sonoff/: instructions.txt
switch_on_off/: main_work02_ok.html  main_work03_ok.cpp  main_work03_ok.html  readme.txt
switch_on_off_/: main_work01_ok.cpp  main_work02_ok.cpp  main_work03_ok.cpp
(+1025 files in other folders)
